# twol

./: .gitignore  CMakeLists.txt  README.md  hexDump  hexDump2  xmake.lua
.cache/clangd/index/: config.cpp.C7E256B55F3B9833.idx  config.hpp.0A564910BE5209B0.idx  dbg_log.cpp.ADE84BD20936E7A5.idx  err_list.hpp.EE50D5BCD18AC917.idx  inicpp.h.26C21D8B7A47EFBE.idx  tests.cpp.5D7C4AF337000610.idx  tests.h.0F6C2480CE908A57.idx  tui.cpp.69196119171A73C4.idx  tui.hpp.7ED9C5866B2BACE4.idx  twol.cpp.A2F843A5CF22FDC9.idx  twol_list.cpp.3C92997A35DD1537.idx  twol_list.hpp.5514FADD8318DECB.idx  utils.cpp.07643AD6AD95AC9F.idx  utils.hpp.1F37C9C9AB00B5D8.idx  wake_on_lan.cpp.0C7A991930BB8D49.idx  wake_on_lan.hpp.453A9B174D280745.idx
.xmake/windows/x64/: xmake.conf
.xmake/windows/x64/cache/: config  detect  history  package  references  toolchain
src/: api_utils.h  compile_commands.json  config.cpp  config.hpp  dbg_log.cpp  dbg_log.hpp  dev_detect.cpp  dev_detect.hpp  err_list.hpp  globals.hpp  ins_deps  meson.build  modal_dialog.hpp  os_check.hpp  ping.cpp  ping.hpp  power_funcs.c  sckt_io.cpp  sckt_io.hpp  some_sample_dev_list  spm.cpp  spm.hpp  spm_api.cpp  spm_list.cpp  spm_list.hpp  tests.cpp  tests.h  tui.cpp  tui.hpp  twol.cpp  twol_list.cpp  twol_list.hpp  utils.cpp  utils.hpp  wake_on_lan.cpp  wake_on_lan.hpp  wol.cpp  wol.hpp
src/.cache/clangd/index/: api_utils.h.8ED548E76CCE8185.idx  config.c.B47CFE4578EF7C42.idx  config.cpp.BE8E7FEBB4FB5C00.idx  config.h.45CF8ECEC0221D7E.idx  config.hpp.4A85140F322F37BC.idx  dbg.c.CFD4867DD74567AD.idx  dbg.h.981E140FC2D20DA6.idx  dbg_log.hpp.D4BB0F4FA88DFB3E.idx  dev_detect.cpp.BE574D4DA0018220.idx  dev_detect.hpp.6683C35C5A312FEB.idx  frontend.cpp.0A9BC94BAC0C8481.idx  frotend2.cpp.79D48928DACABA0B.idx  globals.hpp.D49AF04921334E6B.idx  main.c.9F0B196557A49765.idx  main.cpp.11016BB37250D320.idx  power_funcs.c.019309886D411262.idx  power_funcs.h.280841D191761FA4.idx  proc_manager.c.A83A79F3287F3B9F.idx  proc_manager.h.DF0CA9356CB64C4B.idx  sckt_io.c.6DB01921772B472B.idx  sckt_io.cpp.858C95EE8A3058AA.idx  sckt_io.h.96E34ED44F826E24.idx  sckt_io.hpp.1C617CC9D282754A.idx  spm.cpp.F36F6C87AE188598.idx  spm.hpp.CC7EF168ADEDA435.idx  spm_api.cpp.42F9C80B6B6435EF.idx  spm_list.cpp.CA9CBEFDA0BAD40F.idx  spm_list.hpp.058AC686C86DA3CE.idx  utils.cpp.5F2917E39CE2CB4F.idx  utils.hpp.9F74D82AE1C14C9E.idx  wol.cpp.D26FECA346BEAE78.idx  wol.hpp.394B4C7E162B845D.idx
src/ext_deps/inifile-cpp/: README.md
src/frontend/: frontend.cpp  min_sample.cpp  socket.h  socket2.h
src/server/: config.c  config.h  dbg.c  dbg.h  main.c  power_funcs.c  power_funcs.h  proc_manager.c  proc_manager.h  sckt_io.c  sckt_io.h
src/spm/: xmake.lua
src/test/: main.cpp
